--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,42 @@
     <string name="error_message">Something went wrong, try again later</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_to_cart">Add to Cart</string>
+
+    <!-- Product names -->
+    <string name="product_name_1">Camera</string>
+    <string name="product_name_2">Monitor</string>
+    <string name="product_name_3">Printer</string>
+    <string name="product_name_4">Laptop</string>
+    <string name="product_name_5">Guitar</string>
+    <string name="product_name_6">Dumbbell</string>
+    <string name="product_name_7">Cake</string>
+    <string name="product_name_8">Bag</string>
+    <string name="product_name_9">Car</string>
+    <string name="product_name_10">Shoes</string>
+
+    <!-- Product Uris -->
+    <string name="product_url_1">http://img01.deviantart.net/f308/i/2012/007/8/3/camera_02_png_hq_by_gd08-d4lllmr.png</string>
+    <string name="product_url_2">http://images.clipartpanda.com/computer-monitor-png-monitor-icon-png.png</string>
+    <string name="product_url_3">http://freewebpsd.com/images/FreeWebPsd/Product/Large/hp-laserjet-pro-cp1025nw-color-printer-png-image-ce918a-_png00041.png</string>
+    <string name="product_url_4">http://images.clipartpanda.com/laptop-png-The-Lenovo-IdeaPad-Y550P-324156U-laptop.png</string>
+    <string name="product_url_5">https://d13yacurqjgara.cloudfront.net/users/5172/screenshots/873110/attachments/93723/guitar.png</string>
+    <string name="product_url_6">http://www.eserfitness.com/wp-content/uploads/2014/12/Dumbbell-pack.png</string>
+    <string name="product_url_7">http://pngimg.com/uploads/cake/cake_PNG13114.png</string>
+    <string name="product_url_8">https://www.frostriver.com/wp-content/uploads/2014/02/p-363-652-Flight-Bag.png</string>
+    <string name="product_url_9">http://3.bp.blogspot.com/-l3MxjN1EL8c/VcLaLAGZ0vI/AAAAAAAAE9M/pbiRVc9zl3c/s1600/car_large.png</string>
+    <string name="product_url_10">http://www.doubleselect.com/wp-content/uploads/2012/07/Mr.Hare_AW12_footwear_shoes.png</string>
+    <string name="are_you_sure">Are you sure you want to exit?</string>
+    <string name="close_app">Close App?</string>
+    <string name="yes">YES</string>
+    <string name="no">NO</string>
+    <string name="account_fragment">Account Fragment</string>
+    <string name="favorites_fragment">Favorites Fragment</string>
+    <string name="orders_fragment">Orders Fragment</string>
+    <string name="notifications_fragment">Notifications Fragment</string>
+    <string name="shopping_cart">Shopping Cart</string>
+    <string name="sample_quantity">1</string>
+    <string name="facebook_button">Facebook button</string>
+    <string name="twitter_button">Twitter button</string>
+    <string name="vk_button">VK button</string>
+
 </resources>
