--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -99,5 +99,10 @@
     <string name="cancel">Cancel</string>
     <string name="blank">Blank</string>
     <string name="show_more">Show more</string>
+    <string name="about">About</string>
+    <string name="add_comment">Add comment</string>
+    <string name="save_comment">Save comment</string>
+    <string name="empty_field">Empty field</string>
+    <string name="can_not_be_empty">The comment field can not be empty</string>
 
 </resources>
