--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,5 +105,5 @@
     <string name="empty_field">Empty field</string>
     <string name="can_not_be_empty">The comment field can not be empty</string>
     <string name="rate_this_product">Rate this product</string>
-
+    <string name="product_added">Product added to Cart</string>
 </resources>
